--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
               paper: { 50: '#fcfbf9', 100: '#f5f2eb' },
               stone: { 800: '#44403c', 600: '#78716c', 200: '#e7e5e4' },
               bronze: { 400: '#d4af37', 500: '#b08d55', 600: '#8c6b3d' },
+              warning: { 100: '#fee2e2', 600: '#dc2626' } // Nuovo colore per avviso
             },
             fontFamily: {
               sans: ['DM Sans', 'sans-serif'],
@@ -61,6 +62,7 @@
                 <a href="#" class="px-6 py-2.5 rounded-full text-xs font-bold uppercase tracking-wider text-stone-500 hover:text-stone-900 hover:bg-white hover:shadow-sm transition-all">Home</a>
                 <a href="#eventi-section" class="px-6 py-2.5 rounded-full text-xs font-bold uppercase tracking-wider text-stone-500 hover:text-stone-900 hover:bg-white hover:shadow-sm transition-all">Eventi</a>
                 <a href="#territorio" class="px-6 py-2.5 rounded-full text-xs font-bold uppercase tracking-wider text-stone-500 hover:text-stone-900 hover:bg-white hover:shadow-sm transition-all">Borghi</a>
+                <a href="#natura" class="px-6 py-2.5 rounded-full text-xs font-bold uppercase tracking-wider text-stone-500 hover:text-stone-900 hover:bg-white hover:shadow-sm transition-all">Natura</a>
                 <a href="cammino.html" class="px-6 py-2.5 rounded-full bg-white text-bronze-600 shadow-sm border border-stone-100 text-xs font-bold uppercase tracking-wider hover:text-bronze-500 transition-all">Cammino</a>
             </nav>
              <div class="flex items-center gap-4">
@@ -74,6 +76,7 @@
         <a href="#" onclick="document.getElementById('mobile-menu').classList.add('hidden')" class="text-4xl font-serif text-stone-800 hover:text-bronze-500">Home</a>
         <a href="#eventi-section" onclick="document.getElementById('mobile-menu').classList.add('hidden')" class="text-4xl font-serif text-stone-800 hover:text-bronze-500">Eventi</a>
         <a href="#territorio" onclick="document.getElementById('mobile-menu').classList.add('hidden')" class="text-4xl font-serif text-stone-800 hover:text-bronze-500">Borghi</a>
+        <a href="#natura" onclick="document.getElementById('mobile-menu').classList.add('hidden')" class="text-4xl font-serif text-stone-800 hover:text-bronze-500">Natura</a>
         <a href="cammino.html" class="text-4xl font-serif text-bronze-600 italic">Il Cammino</a>
     </div>
 
@@ -127,8 +130,7 @@
                 </div>
             </div>
 
-            <div id="category-filters" class="flex gap-3 overflow-x-auto pb-6 mb-4 hide-scroll">
-                </div>
+            <div id="category-filters" class="flex gap-3 overflow-x-auto pb-6 mb-4 hide-scroll"></div>
 
             <div id="events-slider" class="flex gap-8 overflow-x-auto pb-12 hide-scroll snap-x snap-mandatory -mx-6 px-6 md:mx-0 md:px-0"></div>
              <div id="load-more-btn" class="hidden text-center mt-8"><button onclick="showAllEvents()" class="px-8 py-3 rounded-full border border-stone-300 text-stone-600 font-bold uppercase text-xs tracking-widest hover:bg-stone-800 hover:text-white transition-all">Tutti gli Eventi</button></div>
@@ -145,15 +147,6 @@
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-4 gap-6 auto-rows-[350px]">
-                <div class="md:col-span-2 md:row-span-2 relative group rounded-[2rem] overflow-hidden cursor-pointer shadow-soft" onclick="openModal('natura_foresta')">
-                    <img data-content-id="natura_foresta_img" class="absolute inset-0 w-full h-full object-cover transition-transform duration-[1.5s] group-hover:scale-105 opacity-0">
-                    <div class="absolute inset-0 bg-gradient-to-t from-stone-900/80 via-transparent to-transparent"></div>
-                    <div class="absolute top-6 left-6"><div data-content-id="natura_foresta_badge" class="bg-white/90 backdrop-blur px-4 py-2 rounded-full text-bronze-600 text-[10px] font-bold uppercase tracking-widest shadow-sm">...</div></div>
-                    <div class="absolute bottom-0 left-0 p-10 w-full">
-                        <h3 data-content-id="natura_foresta_title" class="text-4xl font-serif text-white mb-2">...</h3>
-                        <p data-content-id="natura_foresta_desc" class="text-white/80 font-light line-clamp-2">...</p>
-                    </div>
-                </div>
                 <div class="md:col-span-1 relative group rounded-[2rem] overflow-hidden cursor-pointer shadow-sm" onclick="openModal('borgo_dunarobba')">
                     <img data-content-id="borgo_dunarobba_img" class="absolute inset-0 w-full h-full object-cover transition-transform duration-1000 group-hover:scale-110 opacity-0">
                     <div class="absolute inset-0 bg-gradient-to-t from-stone-900/60 to-transparent"></div>
@@ -164,12 +157,6 @@
                     <div class="absolute inset-0 bg-gradient-to-t from-stone-900/60 to-transparent"></div>
                     <div class="absolute bottom-0 left-0 p-8"><h3 data-content-id="borgo_santa_title" class="text-2xl font-serif text-white group-hover:translate-x-2 transition-transform">...</h3></div>
                 </div>
-                <div class="md:col-span-2 relative group rounded-[2rem] overflow-hidden cursor-pointer shadow-soft" onclick="openModal('natura_grotta')">
-                    <img data-content-id="natura_grotta_img" class="absolute inset-0 w-full h-full object-cover transition-transform duration-1000 group-hover:scale-105 opacity-0">
-                    <div class="absolute inset-0 bg-gradient-to-t from-stone-900/70 via-transparent to-transparent"></div>
-                    <div class="absolute top-6 right-6"><div data-content-id="natura_grotta_badge" class="bg-white/90 backdrop-blur px-4 py-2 rounded-full text-stone-800 text-[10px] font-bold uppercase tracking-widest shadow-sm">...</div></div>
-                    <div class="absolute bottom-0 left-0 p-10"><h3 data-content-id="natura_grotta_title" class="text-3xl font-serif text-white group-hover:translate-x-2 transition-transform">...</h3></div>
-                </div>
                  <div class="md:col-span-1 relative group rounded-[2rem] overflow-hidden cursor-pointer shadow-sm" onclick="openModal('borgo_toscolano')">
                     <img data-content-id="borgo_toscolano_img" class="absolute inset-0 w-full h-full object-cover transition-transform duration-1000 group-hover:scale-110 opacity-0">
                     <div class="absolute inset-0 bg-gradient-to-t from-stone-900/60 to-transparent"></div>
@@ -179,6 +166,50 @@
                     <img data-content-id="borgo_sismano_img" class="absolute inset-0 w-full h-full object-cover transition-transform duration-1000 group-hover:scale-110 opacity-0">
                     <div class="absolute inset-0 bg-gradient-to-t from-stone-900/60 to-transparent"></div>
                     <div class="absolute bottom-0 left-0 p-8"><h3 data-content-id="borgo_sismano_title" class="text-2xl font-serif text-white group-hover:translate-x-2 transition-transform">...</h3></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="natura" class="py-32 bg-paper-100 border-t border-stone-200">
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="flex flex-col md:flex-row justify-between items-end mb-16">
+                 <div class="max-w-2xl">
+                    <span data-content-id="section_natura_subtitle" class="text-bronze-500 text-xs font-bold tracking-[0.25em] uppercase mb-4 block">...</span>
+                    <h2 data-content-id="section_natura_title" class="text-4xl md:text-5xl font-serif text-stone-800 mb-6">...</h2>
+                    <p data-content-id="section_natura_desc" class="text-stone-500 font-light leading-relaxed text-lg">...</p>
+                 </div>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 auto-rows-[450px]">
+                <div class="relative group rounded-[2rem] overflow-hidden cursor-pointer shadow-soft" onclick="openModal('natura_foresta')">
+                    <img data-content-id="natura_foresta_img" class="absolute inset-0 w-full h-full object-cover transition-transform duration-[1.5s] group-hover:scale-105 opacity-0">
+                    <div class="absolute inset-0 bg-gradient-to-t from-stone-900/90 via-transparent to-transparent"></div>
+                    <div class="absolute top-8 left-8">
+                        <div data-content-id="natura_foresta_badge" class="bg-white/90 backdrop-blur px-5 py-2 rounded-full text-bronze-600 text-[10px] font-bold uppercase tracking-widest shadow-sm">...</div>
+                    </div>
+                    <div class="absolute bottom-0 left-0 p-12 w-full">
+                        <h3 data-content-id="natura_foresta_title" class="text-4xl md:text-5xl font-serif text-white mb-4">...</h3>
+                        <p data-content-id="natura_foresta_desc" class="text-white/80 font-light line-clamp-2 text-lg">...</p>
+                         <div class="mt-6 inline-flex items-center text-white text-xs font-bold uppercase tracking-widest gap-2 border-b border-white/30 pb-1 group-hover:border-white transition-all">
+                            Scopri <i data-lucide="arrow-right" class="w-4 h-4"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="relative group rounded-[2rem] overflow-hidden cursor-pointer shadow-soft" onclick="openModal('natura_grotta')">
+                    <img data-content-id="natura_grotta_img" class="absolute inset-0 w-full h-full object-cover transition-transform duration-[1.5s] group-hover:scale-105 opacity-0">
+                    <div class="absolute inset-0 bg-gradient-to-t from-stone-900/90 via-transparent to-transparent"></div>
+                    <div class="absolute top-8 right-8">
+                        <div data-content-id="natura_grotta_badge" class="bg-warning-600/90 backdrop-blur px-5 py-2 rounded-full text-white text-[10px] font-bold uppercase tracking-widest shadow-sm animate-pulse">...</div>
+                    </div>
+                    <div class="absolute bottom-0 left-0 p-12 w-full">
+                        <h3 data-content-id="natura_grotta_title" class="text-4xl md:text-5xl font-serif text-white mb-4">...</h3>
+                        <p data-content-id="natura_grotta_desc" class="text-white/80 font-light line-clamp-2 text-lg">...</p>
+                         <div class="mt-6 inline-flex items-center text-white text-xs font-bold uppercase tracking-widest gap-2 border-b border-white/30 pb-1 group-hover:border-white transition-all">
+                            Dettagli <i data-lucide="arrow-right" class="w-4 h-4"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
